# T-DT_CampCon

./: .gitignore  README.md
ArmorDetection/src/: ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  UnifiedRotatedRect.h  main.cpp
Common/src/: BnD.cpp  CaliHSV.cpp  HSVContours.cpp  ProcsBGR.cpp  ProcsHSV.cpp  Recog.cpp  SVMTrainer.cpp
Project/: CMakeLists.txt
Project/config/: camera_config.txt  default_config.txt  development_config.txt  production_config.txt
Project/data/calibration/: camera_params.yml
Project/docs/: README.md
Project/scripts/: build.sh  run.sh
Project/src/: CMakeLists.txt  main.cpp
Project/src/core/: ArmorDetector.cpp  ArmorDetector.h  CameraCalibrator.cpp  CameraCalibrator.h  DigitRecognizer.cpp  DigitRecognizer.h  LightBarDetector.cpp  LightBarDetector.h  PnPSolver.cpp  PnPSolver.h  TrajectoryPredictor.cpp  TrajectoryPredictor.h  UnifiedRotatedRect.cpp  UnifiedRotatedRect.h  armor_ekf.cpp  armor_ekf.h
Project/src/include/: common.h
Project/src/utils/: ConfigLoader.cpp  ConfigLoader.h  ImageUtils.cpp  ImageUtils.h  MathUtils.cpp  MathUtils.h
src/: BnD.cpp  CMakeLists.txt
